(chore): Update captcha placeholder's text color

--- a/src/app/modules/captcha/captcha.component.scss
+++ b/src/app/modules/captcha/captcha.component.scss
@@ -9,9 +9,10 @@
     @include m-theme() {
       background-color: themed($m-bgColor--primary) !important;
     }
-    &::placeholder {
-      font-weight: 400 !important;
-      font-size: 14px !important;
+    font-family: 'Roboto', Helvetica, sans-serif;
+    font-weight: 300;
+
+    ::placeholder {
       @include m-theme() {
         color: themed($m-textColor--secondary);
       }
