--- a/src/app/modules/homepage-v3/homepage-v3.component.ng.scss
+++ b/src/app/modules/homepage-v3/homepage-v3.component.ng.scss
@@ -2,6 +2,12 @@
 @import 'typography';
 
 :host {
+  h3 {
+    @media screen and(max-width: $m-grid-max-mobile) {
+      font-size: 32px !important;
+    }
+  }
+
   > section:first-of-type {
     @include m-theme() {
       background-color: themed($m-bgColor--primaryDarkAlways);
@@ -15,7 +21,7 @@
       width: 100vw;
       height: 100vh;
       object-fit: cover;
-      min-height: 675px;
+      // min-height: 675px;
     }
 
     margin: -75px 0 0;
@@ -153,7 +159,8 @@
 
     .m-homepage__asFeaturedIn {
       z-index: 1;
-      background-color: white;
+      background-color: #fff;
+      border-bottom: 1px solid #f5f5f5;
       ::ng-deep .m-marketing__asFeaturedIn {
         margin: 5vh auto;
         max-width: 1180px !important;
@@ -167,7 +174,7 @@
     box-sizing: border-box;
     position: relative;
     z-index: 0;
-    padding: 0 $minds-padding * 2;
+    padding: 0 $minds-padding * 4;
 
     h3 {
       font-size: 40px;
@@ -179,6 +186,7 @@
     }
 
     .m-marketing__wrapper {
+      padding: 0 !important;
       ::ng-deep .m-marketing__body {
         padding: 0;
         display: flex;
@@ -278,13 +286,11 @@
     }
   }
 
+  .m-marketing__image span::after {
+    display: none !important;
+  }
+
   .m-marketing__section--style-4 {
-    margin-bottom: 205px !important;
-
-    @media screen and(max-width: $m-grid-max-mobile) {
-      margin-bottom: 0;
-    }
-
     .m-marketing__wrapper {
       .m-marketing__body {
         @media screen and(min-width: $m-grid-min-vp) {
@@ -296,6 +302,11 @@
     .m-marketing__image {
       margin-right: 0 !important;
       display: flex;
+      grid-row: unset;
+
+      @media screen and (max-width: $m-grid-max-mobile) {
+        padding: 0 10vw;
+      }
 
       > span {
         margin-bottom: unset;
@@ -429,8 +440,10 @@
   }
 
   .m-marketing__section {
-    @media screen and(max-width: $m-grid-max-mobile) {
-      margin-bottom: $minds-margin * 2;
+    margin-bottom: $minds-margin * 4 !important;
+
+    @media screen and(min-width: $m-grid-max-mobile) {
+      margin-bottom: 10vh !important;
     }
 
     h2 {
@@ -487,15 +500,6 @@
             color: themed($m-textColor--primary);
           }
           margin-bottom: $minds-margin * 4;
-
-          @media screen and(min-width: $m-grid-max-mobile) and (max-width: $m-grid-max-tablet) {
-            font-size: 24px;
-          }
-
-          @media screen and (max-width: $m-grid-max-mobile) {
-            font-size: 19px;
-            line-height: 25px;
-          }
         }
 
         .m-homepage__joinButton {
@@ -556,6 +560,10 @@
         #f9fafc,
         #f9fafc
       ) !important;
+    }
+
+    .marketingTitle__centered {
+      margin-top: $minds-margin * 2;
     }
   }
 }
