--- a/src/app/common/components/button/button.component.ng.scss
+++ b/src/app/common/components/button/button.component.ng.scss
@@ -82,6 +82,12 @@
       }
     }
     &.m-button--blue {
+      &:not(m-button--solid) {
+        @include m-theme() {
+          border-color: themed($m-link);
+        }
+      }
+
       &.m-button--dropdown ::ng-deep .m-button__dropdownArrow {
         @include m-theme() {
           border-color: themed($m-link);
@@ -95,9 +101,10 @@
 
         &:not(:disabled) {
           &:not(.m-button--overlay) {
-            &:hover {
+            &:hover,
+            &:active {
               @include m-theme() {
-                background-color: rgba(themed($m-link), 0.6);
+                background-color: themed($m-link--hover);
               }
             }
           }
