--- a/src/app/modules/homepage-v3/homepage-v3.component.ng.scss
+++ b/src/app/modules/homepage-v3/homepage-v3.component.ng.scss
@@ -21,6 +21,7 @@
       width: 100vw;
       height: 100vh;
       object-fit: cover;
+      background-color: themed($m-bgColor--primaryDarkAlways);
       // min-height: 675px;
     }
 
