Update phone input component so internal component doesn't overflow

--- a/src/app/common/components/phone-input-v2/phone-input-v2.component.scss
+++ b/src/app/common/components/phone-input-v2/phone-input-v2.component.scss
@@ -23,7 +23,7 @@ m-phoneInput {
     justify-content: flex-start;
     flex-flow: row nowrap;
     align-items: center;
-    margin-bottom: $minds-margin * 2;
+    max-width: 100%;
 
     @include m-theme() {
       background-color: themed($m-bgColor--primary);
