Experiment on bg

--- a/src/app/modules/homepage-v3/homepage-v3.component.html
+++ b/src/app/modules/homepage-v3/homepage-v3.component.html
@@ -1,12 +1,13 @@
 <div class="mf-jumpAnchor" #topAnchor></div>
 
 <section>
-  <img
-    [src]="cdnAssetsUrl + 'assets/homepage/neural.png'"
-    class="m-homepage__v3__neuralBg"
-    [m-blurhash]="blurhash"
-    [m-blurhashFullscreen]="true"
-  />
+  <div class="m-homepage__v3__neuralBg">
+    <img
+      [src]="cdnAssetsUrl + 'assets/homepage/neural.png'"
+      [m-blurhash]="blurhash"
+      [m-blurhashFullscreen]="true"
+    />
+  </div>
 
   <div class="m-homepage__v3__firstSection__container">
     <div
