--- a/src/app/modules/newsfeed/activity-v2/content/content.component.html
+++ b/src/app/modules/newsfeed/activity-v2/content/content.component.html
@@ -121,7 +121,9 @@
       [isModal]="isModal"
       [activityV2Feature]="true"
       [displayAsColumn]="
-        service.displayOptions.minimalMode || service.displayOptions.isModal
+        service.displayOptions.minimalMode ||
+        service.displayOptions.isModal ||
+        service.displayOptions.showBoostRotatorButtons
       "
       [isInBoostRotator]="service.displayOptions.showBoostRotatorButtons"
     >
