--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -36,7 +36,9 @@
             showOnlyCommentsInput: false,
             showComments: !fixedHeight,
             showInteractions: true,
-            autoplayVideo: false
+            autoplayVideo: false,
+            isSingle: true,
+            permalinkBelowContent: true
           }"
           [slot]="1"
           (deleted)="delete($event)"
