--- a/src/stylesheets/spacing.scss
+++ b/src/stylesheets/spacing.scss
@@ -21,3 +21,13 @@ $spacing7: 1.75rem; // 28px
 $spacing8: 2rem; // 32px
 $spacing9: 2.25rem; // 36px
 $spacing10: 2.5rem; // 40px
+$spacing11: 2.75rem; // 44px
+$spacing12: 3rem; // 48px
+$spacing13: 3.25rem; // 52px
+$spacing14: 3.5rem; // 56px
+$spacing15: 3.75rem; // 60px
+$spacing16: 4rem; // 64px
+$spacing17: 4.25rem; // 68px
+$spacing18: 4.5rem; // 72px
+$spacing19: 4.75rem; // 76px
+$spacing20: 5rem; // 80px
