--- a/src/app/common/layout/sidebar/navigation.component.ng.scss
+++ b/src/app/common/layout/sidebar/navigation.component.ng.scss
@@ -485,7 +485,7 @@
         img,
         ::ng-deep m-icon i {
           font-size: 21px;
-          width: 20px;
+          width: 20px !important;
         }
 
         i.m-icon--more {
