--- a/src/app/modules/newsfeed/activity-v2/activity.component.html
+++ b/src/app/modules/newsfeed/activity-v2/activity.component.html
@@ -1,96 +1,99 @@
 <ng-container m-clientMeta>
-  <div
-    *ngIf="
-      !service.displayOptions.minimalMode &&
-      !service.displayOptions.isSidebarBoost
-    "
-    class="m-activity__leftColumn m-activity__avatar"
-  >
-    <ng-container *ngIf="entity$ | async as entity">
-      <div
-        *ngIf="
-          entity.boosted || (entity.remind_users && entity.remind_users.length)
-        "
-        class="m-activityLeftColumn__spacer"
-      ></div>
-    </ng-container>
-    <m-hovercard
-      *ngIf="entity$ | async as entity"
-      [publisher]="entity.ownerObj"
-      [offset]="[0, 15]"
-    >
-      <a [routerLink]="['/', entity.ownerObj.username]">
-        <img [src]="avatarUrl" />
-      </a>
-    </m-hovercard>
-  </div>
-
-  <div class="m-activity__rightColumn" *ngIf="entity$ | async as entity">
+  <div class="m-activity__top">
     <div
-      class="m-activity__optionalTopRow"
       *ngIf="
-        entity.boosted ||
-        (entity.remind_users && entity.remind_users.length) ||
-        service.displayOptions.showBoostRotatorButtons
+        !service.displayOptions.minimalMode &&
+        !service.displayOptions.isSidebarBoost
       "
+      class="m-activity__leftColumn m-activity__avatar"
     >
-      <m-activityV2__flag></m-activityV2__flag>
-      <div
-        class="m-activity__boostRotatorButtons"
-        *ngIf="service.displayOptions.showBoostRotatorButtons"
+      <ng-container *ngIf="entity$ | async as entity">
+        <div
+          *ngIf="
+            entity.boosted ||
+            (entity.remind_users && entity.remind_users.length)
+          "
+          class="m-activityLeftColumn__spacer"
+        ></div>
+      </ng-container>
+      <m-hovercard
+        *ngIf="entity$ | async as entity"
+        [publisher]="entity.ownerObj"
+        [offset]="[0, 15]"
       >
-        <m-icon
-          iconId="chevron_left"
-          [sizeFactor]="1.8"
-          [rem]="true"
-          (click)="previousBoost.emit()"
-        ></m-icon
-        ><m-icon
-          iconId="chevron_right"
-          [sizeFactor]="1.8"
-          [rem]="true"
-          (click)="nextBoost.emit()"
-        ></m-icon>
-      </div>
+        <a [routerLink]="['/', entity.ownerObj.username]">
+          <img [src]="avatarUrl" />
+        </a>
+      </m-hovercard>
     </div>
-    <m-activityV2__ownerBlock
-      *ngIf="service.displayOptions.showOwnerBlock"
-      (deleted)="delete()"
-    >
-    </m-activityV2__ownerBlock>
-    <m-activityV2__content
-      *ngIf="service.shouldShowContent$ | async"
-      [showPaywall]="service.shouldShowPaywall$ | async"
-      [showPaywallBadge]="service.shouldShowPaywallBadge$ | async"
-    ></m-activityV2__content>
-    <ng-container *mIfFeature="'!paywall-2020'">
-      <m-activityV2__paywall
-        *ngIf="service.shouldShowPaywall$ | async"
-      ></m-activityV2__paywall
-    ></ng-container>
-    <m-activityV2__nsfwConsent *ngIf="service.shouldShowNsfwConsent$ | async">
-    </m-activityV2__nsfwConsent>
-
-    <m-activityV2__toolbar
-      *ngIf="service.displayOptions.showToolbar"
-    ></m-activityV2__toolbar>
-
-    <m-activityV2__minimalMetrics
-      *ngIf="
-        service.displayOptions.minimalMode && service.displayOptions.showMetrics
-      "
-    ></m-activityV2__minimalMetrics>
-
-    <ng-container *mIfBrowser>
-      <m-comments__entityOutletV2
-        *ngIf="service.displayOptions.showComments"
-        [entity]="service.entity$ | async"
-        [canDelete]="canDelete$ | async"
-        [showOnlyToggle]="service.displayOptions.showOnlyCommentsToggle"
-        [fixedHeight]="service.displayOptions.fixedHeight"
-        (onHeightChange)="onCommentsHeightChange($event)"
+    <div class="m-activity__rightColumn" *ngIf="entity$ | async as entity">
+      <div
+        class="m-activity__flagRow"
+        *ngIf="
+          entity.boosted ||
+          (entity.remind_users && entity.remind_users.length) ||
+          service.displayOptions.showBoostRotatorButtons
+        "
       >
-      </m-comments__entityOutletV2>
-    </ng-container>
+        <m-activityV2__flag></m-activityV2__flag>
+        <div
+          class="m-activity__boostRotatorButtons"
+          *ngIf="service.displayOptions.showBoostRotatorButtons"
+        >
+          <m-icon
+            iconId="chevron_left"
+            [sizeFactor]="1.8"
+            [rem]="true"
+            (click)="previousBoost.emit()"
+          ></m-icon
+          ><m-icon
+            iconId="chevron_right"
+            [sizeFactor]="1.8"
+            [rem]="true"
+            (click)="nextBoost.emit()"
+          ></m-icon>
+        </div>
+      </div>
+      <m-activityV2__ownerBlock
+        *ngIf="service.displayOptions.showOwnerBlock"
+        (deleted)="delete()"
+      >
+      </m-activityV2__ownerBlock>
+      <m-activityV2__content
+        *ngIf="service.shouldShowContent$ | async"
+        [showPaywall]="service.shouldShowPaywall$ | async"
+        [showPaywallBadge]="service.shouldShowPaywallBadge$ | async"
+      ></m-activityV2__content>
+      <ng-container *mIfFeature="'!paywall-2020'">
+        <m-activityV2__paywall
+          *ngIf="service.shouldShowPaywall$ | async"
+        ></m-activityV2__paywall
+      ></ng-container>
+      <m-activityV2__nsfwConsent *ngIf="service.shouldShowNsfwConsent$ | async">
+      </m-activityV2__nsfwConsent>
+    </div>
   </div>
+
+  <m-activityV2__toolbar
+    *ngIf="service.displayOptions.showToolbar"
+  ></m-activityV2__toolbar>
+
+  <m-activityV2__minimalMetrics
+    *ngIf="
+      service.displayOptions.minimalMode && service.displayOptions.showMetrics
+    "
+  ></m-activityV2__minimalMetrics>
+
+  <ng-container *mIfBrowser>
+    <m-comments__entityOutletV2
+      *ngIf="service.displayOptions.showComments"
+      [entity]="service.entity$ | async"
+      [canDelete]="canDelete$ | async"
+      [showOnlyToggle]="service.displayOptions.showOnlyCommentsToggle"
+      [fixedHeight]="service.displayOptions.fixedHeight"
+      [isSingle]="service.displayOptions.isSingle"
+      (onHeightChange)="onCommentsHeightChange($event)"
+    >
+    </m-comments__entityOutletV2>
+  </ng-container>
 </ng-container>
