--- a/src/app/common/layout/sidebar/navigation.component.ng.scss
+++ b/src/app/common/layout/sidebar/navigation.component.ng.scss
@@ -472,11 +472,11 @@
       img,
       ::ng-deep m-icon i {
         font-size: 21px;
-        width: 20px;
+        width: 20px !important;
       }
 
       i.m-icon--more {
-        font-size: 24px;
+        font-size: 24px !important;
       }
 
       .m-icon--hashtag {
