Chore/register modal improvements - minds#2965
Merge branch 'chore/register-modal-improvements-2965' into 'master'

Chore/register modal improvements - minds#2965

See merge request minds/front!1808

Squashed commit of the following:

commit e6a58f6d7973626295340071c84a44ee8e290bf1
Author: Fausto Arcidiacono <fausto@minds.com>
Date:   Wed Mar 9 11:35:20 2022 +0100

    (chore): Fixed spec tests for Auth Modal component

commit ee1bfa34ac4944fff86cfff775ffe860a30ea30e
Author: Fausto Arcidiacono <fausto@minds.com>
Date:   Wed Mar 9 11:06:45 2022 +0100

    (chore): Update captcha placeholder's text color

commit d76e9d657da1a0424c9cdec4b5f1c09c595ec3d0
Merge: f924476b9 4c7b6f8f9
Author: Fausto Arcidiacono <fausto@minds.com>
Date:   Tue Mar 8 11:50:47 2022 +0100

    Merge branch 'master' into chore/register-modal-improvements-2965

commit f924476b97efae2ba013f315f126b6a4b7914afb
Author: Fausto Arcidiacono <fausto@minds.com>
Date:   Mon Mar 7 20:08:31 2022 +0100

    (chore): 98% completion reached. Waiting for review with Michael, tomorrow.

commit 1c738e754e453631f7c75526033458e1318320bc
Author: Fausto Arcidiacono <fausto@minds.com>
Date:   Mon Mar 7 10:49:56 2022 +0100

    (chore): Moved the form error messages inline with input label

commit cd35a2c4913072c75ab7f214b1c4956c48f82ec2
Merge: bbfabe59e 6add97a76
Author: Fausto Arcidiacono <fausto@minds.com>
Date:   Fri Mar 4 10:03:24 2022 +0100

    Merge remote-tracking branch 'origin' into chore/register-modal-improvements-2965

commit bbfabe59e8360b1744156e9149ddf55ef8a15051
Author: Fausto Arcidiacono <fausto@minds.com>
Date:   Fri Mar 4 09:59:53 2022 +0100

    (chore): Updating the registration/login modal

--- a/src/app/common/components/button/button.component.ng.scss
+++ b/src/app/common/components/button/button.component.ng.scss
@@ -90,6 +90,22 @@
           border-color: themed($m-link);
         }
       }
+      &.m-button-solidColor {
+        @include m-theme() {
+          background-color: themed($m-link);
+          color: themed($m-textColor--primaryInverted);
+        }
+
+        &:not(:disabled) {
+          &:not(.m-button--overlay) {
+            &:hover {
+              @include m-theme() {
+                background-color: rgba(themed($m-link), 0.6);
+              }
+            }
+          }
+        }
+      }
     }
 
     // Warning button
