--- a/src/app/modules/forms/login/login.ng.scss
+++ b/src/app/modules/forms/login/login.ng.scss
@@ -1,6 +1,18 @@
 @import 'defaults.scss';
 
 :host {
+  .m-form__row--label {
+    @include m-theme() {
+      color: themed($m-textColor--secondary);
+    }
+  }
+
+  .m-form__input--details {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+  }
+
   .m-login__title {
     display: flex;
     align-items: center;
@@ -45,6 +57,70 @@
   }
   a {
     font-weight: 400;
+  }
+
+  .m-login__divider {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    padding: 10px 0;
+    box-sizing: border-box;
+
+    span:not(.m-login__divider__text) {
+      flex: 1;
+      margin: 0 -40px;
+      @include m-theme() {
+        border-bottom: 2px solid themed($m-borderColor--primary);
+      }
+    }
+    .m-login__divider__text {
+      padding: 0 20px;
+      font-size: 15px;
+      font-weight: 600;
+    }
+  }
+
+  .m-login__footer {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 18px 0 8px 0;
+
+    .m-register__alreadyAUser {
+      @include m-theme() {
+        color: themed($m-textColor--secondary);
+      }
+
+      .m-login__joinTheConversation {
+        @include m-theme() {
+          color: themed($m-link);
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: $max-mobile) {
+    .m-login__divider {
+      display: none;
+    }
+
+    .m-login__footer {
+      flex-flow: column-reverse nowrap;
+    }
+
+    .m-register__alreadyAUser {
+      margin-top: 16px;
+    }
+
+    ::ng-deep {
+      m-button,
+      button {
+        width: 100%;
+      }
+    }
   }
 
   .m-login-2fa {
